--- a/hades-mongo-web/src/main/webapp/templates/plantilla.xhtml
+++ b/hades-mongo-web/src/main/webapp/templates/plantilla.xhtml
@@ -32,8 +32,11 @@
                             <p:menuitem value="Crucero" action="crucero" />
                             <p:menuitem value="Camarote" action="camarote" />
                             <p:menuitem value="Tour" action="tour" /> 
-                            <p:menuitem value="Reserva" action="reserva" /> 
-                            <p:menuitem value="Registrar consumo" action="registrarConsumo" /> 
+                        </p:submenu>
+                        <p:submenu label="Reserva" >
+                            <p:menuitem value="Registrar Reserva" action="reserva" />
+                            <p:menuitem value="Turista" action="turista" />
+                            <p:menuitem value="Registrar consumo" action="registrarConsumo" />
                         </p:submenu>
                         <p:submenu label="Clientes" >
                             <p:menuitem value="Agregar cliente" action="cliente" />
