--- a/hades-mongo-web/src/main/webapp/templates/plantillaPrincipal.xhtml
+++ b/hades-mongo-web/src/main/webapp/templates/plantillaPrincipal.xhtml
@@ -36,7 +36,7 @@
                         <p:submenu label="Reserva" >
                             <p:menuitem value="Registrar Reserva" action="reserva" />
                             <p:menuitem value="Turista" action="turista" />
-                            <p:menuitem value="Registrar consumo" action="registrarConsumo" />
+                            <p:menuitem value="Registrar consumo" action="consumo" />
                         </p:submenu>
                         <p:submenu label="Clientes" >
                             <p:menuitem value="Agregar cliente" action="cliente" />
